#5 fixed the frontend so that empty queries won't break the program and added styling to error messages

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,3 +89,12 @@
   text-align: left;
   color: #333;
 }
+
+.error-message {
+  color: red;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
